# ghostcacher

./: Cargo.toml  QUICKSTART.md  README.md  docker-compose.yml  env.example  example_usage.py  grafana-dashboard.json
control-plane/: Cargo.toml  Dockerfile
control-plane/src/: admin.rs  config.rs  eviction.rs  main.rs  pod_registry.rs
dashboard/: client.py  client.ts
docs/: api-testing.md  dashboard-seed.md  force-rebuild.md  ghostcacher_repo_structure.html  grafana-setup.md  troubleshooting.md
k8s/: 00-namespace.yaml  01-redis.yaml  02-sidecar.yaml  03-control-plane.yaml  04-kv-relay.yaml
kv-relay/: Cargo.toml  Dockerfile
kv-relay/src/: config.rs  main.rs  relay.rs  transfer.rs
monitoring/: prometheus-local.yml  prometheus.yaml
redis/: redis.conf
scripts/: dev.sh  smoke_test.py
sidecar/: Cargo.toml  Dockerfile
sidecar/src/: config.rs  hasher.rs  interceptor.rs  main.rs  metrics.rs  provider.rs  redis_client.rs  router.rs  types.rs
