[workspace]
members = [
    "sidecar",
    "control-plane",
    "kv-relay",
]
resolver = "2"

[workspace.dependencies]
tokio          = { version = "1.38", features = ["full"] }
axum           = { version = "0.7", features = ["macros"] }
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
reqwest        = { version = "0.12", features = ["json", "stream"] }
redis          = { version = "0.25", features = ["tokio-comp", "cluster-async"] }
sha2           = "0.10"
hex            = "0.4"
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow         = "1.0"
thiserror      = "1.0"
uuid           = { version = "1.8", features = ["v4", "serde"] }
tower          = { version = "0.4", features = ["full"] }
tower-http     = { version = "0.5", features = ["trace", "cors", "timeout"] }
bytes          = "1.6"
async-trait    = "0.1"
opentelemetry  = { version = "0.23", features = ["metrics"] }
prometheus     = { version = "0.13", features = ["process"] }
config         = "0.14"
dashmap        = "5.5"
tiktoken-rs    = "0.5"
