[package]
name    = "ghostcacher-kv-relay"
version = "2.1.0"
edition = "2021"
description = "GhostCacher KV-Relay — cross-node KV tensor transfer via gRPC / RDMA"

[[bin]]
name = "ghostcacher-kv-relay"
path = "src/main.rs"

[dependencies]
tokio              = { workspace = true }
axum               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
redis              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
thiserror          = { workspace = true }
bytes              = { workspace = true }
async-trait        = { workspace = true }
config             = { workspace = true }
tonic              = "0.11"
prost              = "0.12"
