[package]
name    = "ghostcacher-sidecar"
version = "2.1.0"
edition = "2021"
description = "GhostCacher Rust sidecar — intercepts LLM requests, hashes prompt blocks, routes to warmed GPU pods"

[[bin]]
name = "ghostcacher-sidecar"
path = "src/main.rs"

[dependencies]
tokio          = { workspace = true }
axum           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
reqwest        = { workspace = true }
redis          = { workspace = true }
sha2           = { workspace = true }
hex            = { workspace = true }
tracing        = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow         = { workspace = true }
thiserror      = { workspace = true }
uuid           = { workspace = true }
tower          = { workspace = true }
tower-http     = { workspace = true }
bytes          = { workspace = true }
async-trait    = { workspace = true }
prometheus     = { workspace = true }
config         = { workspace = true }
dashmap        = { workspace = true }
tiktoken-rs    = { workspace = true }
